vercel json config

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-    "routes": [
+    "rewrites": [
       {
         "src": "/api/(.*)",
         "dest": "https://sitcomstore.onrender.com/api/$1",
         "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
       },
-      {
-        "src": "/(.*)",
-        "dest": "/$1"
-      }
+          {"source": "/(.*)", "destination": "/"}
     ]
   }
   
