--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
-{
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "https://sitcomstore.onrender.com/api/$1",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
-      },
-      {
-        "source": "/(.*)",
-        "destination": "/$1"
-      }
-    ]
-  }
-  
+    {
+        "rewrites": [
+            {
+                "source": "/api/(.*)",
+                "destination": "https://sitcomstore.onrender.com/api/$1"
+            },
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+        ]
+    }
+
+    
