--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
         "rewrites": [
             {
                 "source": "/api/(.*)",
-                "destination": "https://sitcomstore.onrender.com/api/$1"
+                "destination": "https://sitcomstorebackend.onrender.com/api/$1"
             },
         {
             "source": "/(.*)",
