--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.2.2",
     "vite-plugin-eslint": "^1.8.1",
     "zustand": "^4.4.7"
   },
